--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Stole the memes from https://github.com/iwakkrg/iwakkrg.github.io -->
     
     <!-- Redirect -->
-    <meta http-equiv="refresh" content="0; url=https://www.textemoji.org/p/flirty.html" />
+    <meta http-equiv="refresh" content="0; url=https://c.tenor.com/rv5I7uEXKiAAAAAC/tenor.gif" />
   </head>
   <body>
   </body>
